--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "booking",
+  "name": "natimp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react-multi-carousel": "^2.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "remixicon": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
